Mange/main/default/objects/Branch__c/Branch__c.object-meta.xml
<CustomObject>
    <description>Branch name</description>
    <label>Branch</label>
    <nameField>
        <displayFormat>Br-{0000}</displayFormat>
        <label>Branch Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Branchs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>