Mange/main/default/objects/Branch__c/fields/HOD__c.field-meta.xml
<CustomField>
    <fullName>HOD__c</fullName>
    <label>HOD</label>
    <length>60</length>
    <required>true</required>
    <type>Text</type>
</CustomField>