Mange/main/default/objects/Branch__c/listViews/My_View.listView-meta.xml
<ListView>
    <fullName>My_View</fullName>
    <columns>NAME</columns>
    <columns>Branch__c</columns>
    <columns>HOD__c</columns>
    <filterScope>Mine</filterScope>
    <label>My View</label>
</ListView>